--- a/app/cart/locale/en/LC_MESSAGES/django.po
+++ b/app/cart/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-17 16:18+0300\n"
+"POT-Creation-Date: 2023-06-17 18:10+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,71 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-#: cart/forms.py:9
+
+#: cart/forms.py:9 cart/templates/cart/detail.html:17
 msgid "Количество"
 msgstr "Quantity"
+
+#: cart/templates/cart/detail.html:6 cart/templates/cart/detail.html:11
+msgid "Ваша корзина"
+msgstr "Your cart"
+
+#: cart/templates/cart/detail.html:15
+msgid "Изображение"
+msgstr "Image"
+
+#: cart/templates/cart/detail.html:16
+msgid "Товар"
+msgstr "Product"
+
+#: cart/templates/cart/detail.html:18 cart/templates/cart/detail.html:44
+msgid "Удалить"
+msgstr "Delete"
+
+#: cart/templates/cart/detail.html:19
+msgid "Цена за единицу"
+msgstr "Price for one"
+
+#: cart/templates/cart/detail.html:20
+msgid "Цена"
+msgstr "Price"
+
+#: cart/templates/cart/detail.html:38
+msgid "Обновить"
+msgstr "Refresh"
+
+#: cart/templates/cart/detail.html:56
+msgid "Промежуточный итог"
+msgstr "Subtotal"
+
+#: cart/templates/cart/detail.html:62
+msgid "купон"
+msgstr "coupon"
+
+#: cart/templates/cart/detail.html:63
+msgid "скидка"
+msgstr "discount"
+
+#: cart/templates/cart/detail.html:73
+msgid "Общая сумма"
+msgstr "Total price"
+
+#: cart/templates/cart/detail.html:81
+msgid "Рекомендуем Вам также посмотреть:"
+msgstr "People who bought this also bought"
+
+#: cart/templates/cart/detail.html:95 cart/templates/cart/detail.html:108
+msgid "Продолжить покупки"
+msgstr "Continue shopping"
+
+#: cart/templates/cart/detail.html:96
+msgid "Оформить"
+msgstr "Checkout"
+
+#: cart/templates/cart/detail.html:101
+msgid "Применить"
+msgstr "Apply"
+
+#: cart/templates/cart/detail.html:105
+msgid "Ваша корзина пуста"
+msgstr "Your cart is empty"
