--- a/app/orders/locale/en/LC_MESSAGES/django.po
+++ b/app/orders/locale/en/LC_MESSAGES/django.po
@@ -8,18 +8,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-17 16:18+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2023-06-17 18:33+0300\n"
+"PO-Revision-Date: 2023-06-17 18:17+0300\n"
+"Last-Translator: Nikita Bochkarev <asderus@yandex.ru>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-#: orders/models.py:14
-msgid "Заказчик"
-msgstr "User"
+"X-Translated-Using: django-rosetta 0.9.9\n"
+
+#: orders/apps.py:8 orders/models.py:37
+msgid "Заказы"
+msgstr "Orders"
 
 #: orders/models.py:16
 msgid "Адрес"
@@ -45,25 +47,13 @@ msgstr "Updated"
 msgid "Оплачен"
 msgstr "Paid"
 
-#: orders/models.py:22
-msgid "Промокод"
-msgstr "Coupon"
-
 #: orders/models.py:27
 msgid "Скидка"
 msgstr "Discount"
 
-#: orders/models.py:36 orders/models.py:63
+#: orders/models.py:36
 msgid "Заказ"
 msgstr "Order"
-
-#: orders/models.py:37
-msgid "Заказы"
-msgstr "Orders"
-
-#: orders/models.py:66
-msgid "Товар"
-msgstr "Product"
 
 #: orders/models.py:69
 msgid "Цена"
@@ -80,3 +70,62 @@ msgstr "Order item"
 #: orders/models.py:81
 msgid "Позиции заказа"
 msgstr "Order items"
+
+#: orders/templates/orders/order/create.html:5
+#: orders/templates/orders/order/create.html:9
+msgid "Оформление заказа"
+msgstr "Checkout"
+
+#: orders/templates/orders/order/create.html:11
+msgid "Ваш заказ"
+msgstr "Your order"
+
+#: orders/templates/orders/order/create.html:21
+#: orders/templates/orders/order/detail.html:62
+msgid "скидка"
+msgstr "discount"
+
+#: orders/templates/orders/order/create.html:26
+msgid "Всего"
+msgstr "Total"
+
+#: orders/templates/orders/order/create.html:31
+msgid "Оформить заказ"
+msgstr "Checkout"
+
+#: orders/templates/orders/order/created.html:5
+msgid "Спасибо за заказ!"
+msgstr "Thank you for order!"
+
+#: orders/templates/orders/order/created.html:10
+msgid "Ваш заказ был успешно оформлен. Номер Вашего заказа"
+msgstr "Your order has been successfully placed. Your order number"
+
+#: orders/templates/orders/order/detail.html:20
+msgid "Оплачено"
+msgstr "Paid"
+
+#: orders/templates/orders/order/detail.html:20
+msgid "Не оплачено"
+msgstr "Not Paid"
+
+#: orders/templates/orders/order/detail.html:61
+msgid "Купон"
+msgstr "Coupon"
+
+#: orders/templates/orders/order/detail.html:72
+msgid "Общая сумма"
+msgstr "Total price"
+
+#: orders/templates/orders/order/detail.html:82
+msgid "У Вас нет доступа к этому заказу"
+msgstr "You do not have access to this order"
+
+#~ msgid "Заказчик"
+#~ msgstr "User"
+
+#~ msgid "Промокод"
+#~ msgstr "Coupon"
+
+#~ msgid "Товар"
+#~ msgstr "Product"
