--- a/app/shop/locale/en/LC_MESSAGES/django.po
+++ b/app/shop/locale/en/LC_MESSAGES/django.po
@@ -8,15 +8,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-17 15:59+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2023-06-17 18:33+0300\n"
+"PO-Revision-Date: 2023-06-17 18:34+0300\n"
+"Last-Translator: Nikita Bochkarev <asderus@yandex.ru>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Translated-Using: django-rosetta 0.9.9\n"
+
+#: shop/apps.py:8
+msgid "Магазин"
+msgstr "Shop"
+
 #: shop/models.py:7 shop/models.py:27
 msgid "Название"
 msgstr "Name"
@@ -25,11 +31,11 @@ msgstr "Name"
 msgid "Слаг"
 msgstr "Slug"
 
-#: shop/models.py:15 shop/models.py:26
+#: shop/models.py:15
 msgid "Категория"
 msgstr "Category"
 
-#: shop/models.py:16
+#: shop/models.py:16 shop/templates/shop/product/list.html:11
 msgid "Категории"
 msgstr "Categories"
 
@@ -65,6 +71,58 @@ msgstr "Quantity"
 msgid "Товар"
 msgstr "Product"
 
-#: shop/models.py:45
+#: shop/models.py:45 shop/templates/shop/base.html:41
+#: shop/templates/shop/product/list.html:6
+#: shop/templates/shop/product/list.html:24
 msgid "Товары"
 msgstr "Products"
+
+#: shop/templates/shop/404.html:10
+msgid "Вернуться на главную страницу"
+msgstr "Return to main page"
+
+#: shop/templates/shop/base.html:7 shop/templates/shop/base.html:12
+msgid "Семерочка"
+msgstr "Semerochka"
+
+#: shop/templates/shop/base.html:20
+msgid "Ваша корзина:"
+msgstr "Your cart"
+
+#: shop/templates/shop/base.html:23
+msgid "товар"
+msgstr "product"
+
+#: shop/templates/shop/base.html:25
+msgid "товара"
+msgstr "products"
+
+#: shop/templates/shop/base.html:27
+msgid "товаров"
+msgstr "products"
+
+#: shop/templates/shop/base.html:29
+#, python-format
+msgid "на %(cart.get_total_price)s ₽"
+msgstr ", %(cart.get_total_price)s ₽"
+
+#: shop/templates/shop/base.html:33
+msgid "Ваша корзина пуста"
+msgstr "Your cart is empty"
+
+#: shop/templates/shop/base.html:38
+msgid "Мой профиль"
+msgstr "My profile"
+
+#: shop/templates/shop/product/detail.html:19
+#, python-format
+msgid "Осталось: %(product.quantity)s шт"
+msgstr "Remaining %(product.quantity)s pieces"
+
+#: shop/templates/shop/product/detail.html:23
+msgid "Добавить в корзину"
+msgstr "Add to cart"
+
+#: shop/templates/shop/product/detail.html:28
+msgid "Рекомендуем Вам также посмотреть:"
+msgstr "People who bought this also bought:"
